# demo_kp

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  FEATURE_SPEC.md  ROADMAP.md
src/: kp_app.py  web_app.py
src/backend/: __init__.py  application.py
src/backend/astro_engine/: __init__.py  engine.py  provider.py  time.py  types.py
src/backend/chart_engine/: __init__.py  engine.py  types.py
src/backend/event_finder/: __init__.py  engine.py
src/backend/kp_analysis/: __init__.py  dasha.py  transit.py  types.py
src/backend/location_service/: __init__.py  resolver.py  timezone.py  types.py
src/backend/reporting/: __init__.py  service.py
src/backend/storage/: __init__.py  repository.py
tests/: test_application.py  test_astro_engine.py  test_chart_analysis_pipeline.py  test_location_service.py  test_web_app.py
