[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-kp-backend"
version = "0.1.0"
description = "Backend modules for KP astrology application"
requires-python = ">=3.11"
dependencies = []


[project.scripts]
kp-app = "src.kp_app:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
